[metadata]
name = art_exhibition_api
version = 0.0.0
author = Mathieu Clément
author_email = mclfy1893@gmail.com
description = A test API that gather art exhibitions and wether forcast for the venues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
platform = OS Independent
url = https://github.com/mclement18/art-exhibition-api
project_urls =
    Bug Tracker = https://github.com/mclement18/art-exhibition-api/issues
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    flask ==2.2.2
    requests ==2.28.1
    python-dotenv ==0.20.0
    Flask-APScheduler ==1.12.4
    Flask-PyMongo ==2.3.0
include_package_data = True

[options.packages.find]
where = src
